objects/Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <picklist>
            <picklistValues>
                <fullName>=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>!=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Like</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>preference__c</fullName>
        <defaultValue>100</defaultValue>
        <label>preference</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Criteria</label>
    <nameField>
        <label>Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>